# timbre

./: .gitmodules  CMakeLists.txt  build.sh
include/: analysis.hpp  audio.hpp  dsp.hpp  globals.hpp  timbre.hpp  ui.hpp
qml/: MainView.qml
src/: analysis.cpp  audio.cpp  dsp.cpp  main.cpp  ui.cpp
